--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # The following people contributed to the simple shell project
 
 Leah Kamau <kamauleah35@gmail.com>
+Lucy Maina <lucymaina4172@gmail.com>
