--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# The following people contributed to the simple shell project
+# This file lists all individuals having contributed content to the repository.
 
 Leah Kamau <kamauleah35@gmail.com>
 Lucy Maina <lucymaina4172@gmail.com>
